# vector-inspector

./: .aider.chat.history.md  .aider.input.history  .coverage  .gitignore  2.6.8  BACKWARD_COMPATIBILITY_STRATEGY.md  CHANGELOG.md  CLASS_ANNOTATION_MIGRATION.md  CLAUDE.md  Dockerfile  FEATURES.md  GETTING_STARTED.md  LICENSE  MIGRATION_VERIFICATION.md  PHASE2_QUICKSTART.md  PHASE2_SUMMARY.md  PROJECT_STATUS.md  README.md  RELEASE_REASON.md  ROADMAP.md  TODO.md  bash.exe.stackdump  bumpver.toml  copilot-instructions.md  coverage.json  coverage.lcov  coverage.txt  coverage.xml  create_sample_data.py  entities.json  mempalace.yaml  mkdocs.yaml  mypy.ini  nuitka-bytecode.config.yml  nuitka-crash-report.xml  pypi-upload.sh  pyproject.toml  pytest.ini  pytest_runner.py  telemetry.txt  (+6 more)
.aider.tags.cache.v4/: cache.db
.claude/context/: CONTEXT.md
.github/: copilot-instructions.md
.github/instructions/: coding.instructions.md  testing.instructions.md  workflows.instructions.md
.github/workflows/: build-installer.yml  ci-tests.yml  lint.yml  netlify-deploy.yml  nuitka.yml  publish.yml  release-and-publish.yml  release.yml  version-bump.yml
docs/: BOOTSTRAP_INSTALLER.md  CONTEXT_MENU_PLOT_POINTS.md  EMBEDDING_TRUTHINESS.md  EMBEDDING_TRUTHINESS_FIX_SUMMARY.md  HISTOGRAM_DISTRIBUTION_PLAN.md  LARGE_FILE_REFACTOR_CANDIDATES.md  METADATA_VIEW_REFACTOR_EXAMPLE.md  PHASE2_SUMMARY.md  PINECONE_IMPLEMENTATION_SUMMARY.md  PR-25-review-responses.md  PYTEST_QT_SOLUTION.md  REFACTOR_CHECKLIST.md  REFACTOR_IMPLEMENTATION_SUMMARY.md  RELEASE_PROCESS.md  RELEASE_REASON.md  ROADMAP.md  SETTINGS.md  TELEMETRY_ERROR_LOGGING_LOCATIONS.md  TEST_CONSOLIDATION_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  TEST_PLAN_BACKUP_RESTORE.md  TODO.md  UI_REFACTOR.md  UI_REFACTOR_MIGRATION_COMPLETE.md  UI_REFACTOR_PHASE2_COMPLETE.md  UNIFIED_MENU_AND_EMBEDDING_FIX_SUMMARY.md  advanced-telemetry.md  architecture.md  artifact_resolution.md  cloud_embedding_model_requirements.md  clustering_migration.md  content_column_detection.md  core_vs_pro_architecture.md  database_provider_abstraction.md  diagram.md  embedding_inspector_implementation.md  embedding_provider_guide.md  index.md  known_embedding_models.md  metadata_mapping.md  (+13 more)
docs/models/: cloud-modal-support.md  model_expansion_checklist.md  public-modal-support.md
docs/providers/: pinecone-fixes-and-improvements.md
docs/reference/: connections.md  core.md
docs/telemetry/: model_telemetry_and_registry.md  netlify-to-github.md  netlify.md  unified_telemetry_architecture.md
docs/todos/: cross_platform_packaging.md  docs_reorganization.md  provider_capabilities.md
docs/upcoming/: api_layer_example_openapi.json  api_layer_plan.md  ask-ai-in-search.md  file_preview_and_image_ingestion.md  model_aware_ingestion_and_modality_restricted_search.md  plan-enhancedStatusBarFeedback.prompt.md  provider_and_model_comparisons.md
scripts/: add_release_reason.py  bootstrap_installer.py  bootstrap_installer_OLD.py  build_bootstrap_exe.py  build_installer.py  bumpver.py  clean_pycache.sh  create_clear_installer.py  create_installer.py  create_installer_full_pyarmor.py  ingest_subtitles.py  install-llm-unix.sh  install-llm-windows.ps1  llm-console.sh  run_clean.sh  test.sh
scripts/installer/: install.sh
site/: index.html
site/netlify/functions/: telemetry.js
src/vector_inspector/: __init__.py  __main__.py  _cli.py  main.py
src/vector_viewer/: main.py
tests/: conftest.py  test_backup_helpers.py  test_backup_restore_service.py  test_cli.py  test_content_column_detection.py  test_content_column_persistence.py  test_filter_service.py  test_item_details_embedding.py  test_lancedb_metadata_padding.py  test_main.py  test_main_window.py  test_ollama_embedding.py  test_pgvector_content_column.py  test_pinecone_connection.py  test_runner.py  test_search_view_inline_details.py
tests/components/: test_ask_ai_dialog.py  test_create_collection_dialog.py  test_create_collection_dialog_validations.py  test_filter_builder.py  test_inline_details_pane.py  test_profile_manager_panel.py  test_splash_window.py  test_update_details_dialog.py
tests/core/: test_base_connection.py  test_clustering.py  test_embedding_utils.py  test_feature_flags.py  test_logging.py  test_model_cache.py  test_model_registry.py  test_provider_factory.py  test_qdrant_helpers.py  test_sample_data_generator.py  test_template_connection.py
tests/fakes/: fake_provider.py
tests/integration/: test_clustering_real_embeddings.py  test_provider_manager.py
tests/metadata/: test_data_loading_helpers.py  test_data_operations.py  test_metadata_threads_worker.py  test_telemetry_settings_panel.py
tests/providers/: test_delete_where.py  test_pinecone_connection.py
tests/scripts/: conftest.py  test_bootstrap_installer.py  test_bootstrap_installer_integration.py
tests/services/: test_app_state.py  test_backup_helpers.py  test_backup_restore_service.py  test_cache_manager.py  test_collection_service.py  test_collection_service_edgecases.py  test_connection_manager.py  test_credential_service.py  test_data_loaders.py  test_file_ingestion_service.py  test_filter_service.py  test_import_export_service.py  test_install_service.py  test_profile_service.py  test_search_ai_service.py  test_search_runner.py  test_settings_service.py  test_status_reporter_timeout.py  test_task_runner.py  test_telemetry_service.py  test_update_service.py  test_visualization_service.py
tests/ui/: test_backup_restore_dialog.py  test_llm_console.py  test_settings_appearance.py  test_settings_dialog.py
tests/utils/: fake_llm_provider.py  test_exception_handler.py  test_lazy_imports.py
tests/views/: test_clustering_panel.py  test_collection_worker.py  test_connection_view.py  test_histogram_panel.py  test_info_panel.py  test_metadata_view_inline_details.py  test_metadata_view_status_reporting.py  test_plot_panel.py  test_search_threads.py  test_search_view.py  test_search_view_ask_ai.py  test_search_view_inline_details.py  test_visualization_view.py
vi_installer/: __init__.py  platform.py  python.py  shortcuts.py  state.py  ui.py  venv.py
(+159 files in other folders)
