[project]
name = "vector-inspector"
version = "0.8.4"
description = "A comprehensive desktop application for visualizing, querying, and managing vector database data"
authors = [
    {name = "Anthony Dawson", email = "anthonypdawson+github@gmail.com"},
]
dependencies = [
    # Core GUI and data handling (always required)
    "pyside6>=6.6.0",
    "PySide6-Addons>=6.6.3.1",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "keyring>=25.7.0",  # secure credential storage
    "gputil>=1.4.0",
    "requests>=2.33.1",
]

requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://vector-inspector.divinedevops.com"
Source = "https://github.com/anthonypdawson/vector-inspector"
Issues = "https://github.com/anthonypdawson/vector-inspector/issues"
Documentation = "https://github.com/anthonypdawson/vector-inspector#readme"

[project.scripts]
vector-inspector = "vector_inspector._cli:console_entry"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "black>=23.12.0",
    "ruff>=0.14.14",
    "mypy>=1.19.1",
    "ipython>=8.18.0",
    "briefcase>=0.4.2",
    "pyarmor>=9.2.3",
    "bumpver>=2025.1131",
    "pyside6-stubs>=6.7.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-testmon>=2.2.0",
    "pytest-timeout>=2.4.0",
    "pytest-env>=1.5.0",
]

# Provider and feature groups for PDM (mirrors project.optional-dependencies)
# These are needed for `pdm install -G <group>` to work
# NOTE: These lists must be kept in sync with [project.optional-dependencies] below.
# PDM uses [tool.pdm.dev-dependencies] for `pdm install -G`, while pip uses
# [project.optional-dependencies] for `pip install vector-inspector[<group>]`.
# Updating one requires updating the other.
chromadb = ["chromadb>=0.4.22"]
qdrant = ["qdrant-client>=1.7.0"]
pinecone = ["pinecone>=8.0.0"]
lancedb = ["lancedb>=0.27.0", "pyarrow>=14.0.0"]
pgvector = ["psycopg2-binary>=2.9.11", "pgvector>=0.4.2"]
weaviate = ["weaviate-client>=4.19.2"]
milvus = ["pymilvus[milvus_lite]>=2.6.8"]
embeddings = ["sentence-transformers>=2.2.0", "fastembed>=0.7.4", "hf-xet>=1.2.0"]
clip = ["torch>=2.0.0", "transformers>=4.40.0", "Pillow>=10.0.0"]
viz = ["scikit-learn>=1.3.0", "umap-learn>=0.5.5", "hdbscan>=0.8.41"]
documents = ["pypdf>=4.0.0", "python-docx>=1.1.0"]
llm = ["llama-cpp-python>=0.3.0"]

recommended = [
    "chromadb>=0.4.22",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "fastembed>=0.7.4",
    "hf-xet>=1.2.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.5",
    # hdbscan is intentionally excluded from this bundle: it requires a C compiler
    # on some platforms and adds significant install time.  Users who need full
    # clustering support should install the [viz] extra or [all] instead.
]

all = [
    "chromadb>=0.4.22",
    "qdrant-client>=1.7.0",
    "pinecone>=8.0.0",
    "lancedb>=0.27.0",
    "pyarrow>=14.0.0",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.4.2",
    "pymilvus[milvus_lite]>=2.6.8",
    "weaviate-client>=4.19.2",
    "sentence-transformers>=2.2.0",
    "fastembed>=0.7.4",
    "hf-xet>=1.2.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.5",
    "hdbscan>=0.8.41",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "Pillow>=10.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
# Database providers (install only what you use)
chromadb = ["chromadb>=0.4.22"]
qdrant = ["qdrant-client>=1.7.0"]
pinecone = ["pinecone>=8.0.0"]
lancedb = ["lancedb>=0.27.0", "pyarrow>=14.0.0"]
pgvector = ["psycopg2-binary>=2.9.11", "pgvector>=0.4.2"]
weaviate = ["weaviate-client>=4.19.2"]
milvus = ["pymilvus[milvus_lite]>=2.6.8"]

# Popular database bundles
starter = ["chromadb>=0.4.22", "qdrant-client>=1.7.0"]
cloud = ["pinecone>=8.0.0", "weaviate-client>=4.19.2"]
local = ["chromadb>=0.4.22", "lancedb>=0.27.0", "pyarrow>=14.0.0"]

# ML/Embedding features
embeddings = ["sentence-transformers>=2.2.0", "fastembed>=0.7.4", "hf-xet>=1.2.0"]
clip = ["torch>=2.0.0", "transformers>=4.40.0", "Pillow>=10.0.0"]
viz = ["scikit-learn>=1.3.0", "umap-learn>=0.5.5", "hdbscan>=0.8.41"]
documents = ["pypdf>=4.0.0", "python-docx>=1.1.0"]

# llama-cpp-python does not ship pre-built wheels on PyPI for all platforms;
# on Windows (no C++ toolchain) install via the pre-built wheel index:
#   pip install llama-cpp-python --prefer-binary --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cpu
# or for CUDA:
#   pip install llama-cpp-python --prefer-binary --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cu121
# The llm extra is provided for Linux/macOS where the source build works out-of-the-box.
llm = ["llama-cpp-python>=0.3.0"]

# Convenience bundles
recommended = [
    "chromadb>=0.4.22",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "fastembed>=0.7.4",
    "hf-xet>=1.2.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.5",
    # hdbscan is intentionally excluded from this bundle: it requires a C compiler
    # on some platforms and adds significant install time.  Users who need full
    # clustering support should install the [viz] extra or [all] instead.
]

# Everything (backward compatibility - same as old behavior)
all = [
    "chromadb>=0.4.22",
    "qdrant-client>=1.7.0",
    "pinecone>=8.0.0",
    "lancedb>=0.27.0",
    "pyarrow>=14.0.0",
    "psycopg2-binary>=2.9.11",
    "pgvector>=0.4.2",
    "pymilvus[milvus_lite]>=2.6.8",
    "weaviate-client>=4.19.2",
    "sentence-transformers>=2.2.0",
    "fastembed>=0.7.4",
    "hf-xet>=1.2.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.5",
    "hdbscan>=0.8.41",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "Pillow>=10.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "A",
    "C4",
    "DTZ",
    "T20",
    "RET",
    "SIM",
    "ARG",
    "RUF",
]
ignore = [
    "E501",    # Line too long (black handles this)
    "I001",    # Import block unsorted
    "UP045",   # Use Union[X, Y] instead of X | Y for py3.9 compat
    "SIM105",  # Use contextlib.suppress instead of try/except pass
    "SIM108",  # Use ternary operator
    "SIM117",  # Use single with statement
    # Unused arguments - often required for interface compliance (Qt signals, abstract methods)
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
    "ARG003",  # Unused class method argument
    "ARG004",  # Unused static method argument
    "ARG005",  # Unused lambda argument
    # Test-specific tolerances
    "E741",    # Ambiguous variable name (l, O, I) - common in math/test code
    "RUF003",  # Ambiguous unicode in comments (×, −) - intentional in documentation
    "RUF002",  # Ambiguous unicode in docstrings
    "DTZ005",  # datetime.now() without tz - not critical for cache timestamps
    "B904",    # raise without from - acceptable for wrapped import errors
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["vector_inspector"]
[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[tool.pdm.scripts]
[tool.pdm.scripts.vector-inspector]
cmd = "python -m vector_inspector"
env = { PYTHONPATH = "src" }

[tool.pdm.scripts.bumpver]
cmd = "python scripts/bumpver.py"
env = { PYTHONPATH = "src" }




